--- a/geonetwork/microservices/searching/application.yml
+++ b/geonetwork/microservices/searching/application.yml
@@ -20,6 +20,9 @@ gn:
   datadir: ${java.io.tmpdir}/gn-datadir
   baseurl: http://geonetwork:8080
   legacy.url: http://geonetwork:8080/geonetwork
+  site:
+    name: GeoNetwork
+    organization: opensource
   index:
     url: http://localhost:9200
     records: gn-records
