Add geor role to GN profile mappings

--- a/geonetwork/geonetwork.properties
+++ b/geonetwork/geonetwork.properties
@@ -17,6 +17,15 @@ geonetwork.upload.dir=${geonetwork.dir}/data/upload/
 geonetwork.formatter.dir=${geonetwork.dir}/data/formatter/
 geonetwork.htmlcache.dir=${geonetwork.resources.dir}/htmlcache/
 
+# Map geOrchestra user role names to GeoNetwork user profiles.
+# Available GN profile names are:
+# Administrator, UserAdmin, Reviewer, Editor, RegisteredUser, Guest, Monitor
+geonetwork.profiles.default:RegisteredUser
+geonetwork.profiles.rolemappings.[ADMIN]=Administrator
+geonetwork.profiles.rolemappings.[REVIEWER]=Reviewer
+geonetwork.profiles.rolemappings.[EDITOR]=Editor
+geonetwork.profiles.rolemappings.[USER]=RegisteredUser
+
 # database configuration
 jdbc.host=database
 jdbc.port=5432
