--- a/geonetwork/geonetwork.properties
+++ b/geonetwork/geonetwork.properties
@@ -77,3 +77,7 @@ ldap.sync.cron=0 * * * * ?
 # then updates the validation table in the database, runs every 2 hours:
 schematron.job.activated=true
 schematron.job.cronExpression=0 0 0/2 * * ?
+
+# GN 4
+es.featureproxy.targeturi=http://localhost:9200/gn-features/{_}
+kb.url=http://kibana:5601
