--- a/gateway/gateway.yaml
+++ b/gateway/gateway.yaml
@@ -4,6 +4,7 @@
 #
 georchestra:
   gateway:
+    security.ldap.enabled: true
     default-headers:
       # Default security headers to append to proxied requests
       proxy: true
@@ -12,29 +13,19 @@ georchestra:
       org: true
       orgname: true
     global-access-rules:
-    - intercept-url: .*/ogcproxy/.*
-      allowed-roles: NO_ONE
-    - intercept-url: /testPage
-      anonymous: false
-    - intercept-url: .*(\?|&amp;)login.*
-      allowed-roles: USER,GN_EDITOR,GN_REVIEWER,GN_ADMIN,ADMINISTRATOR,SUPERUSER,ORGADMIN
     - intercept-url:
-      - .*
-      - /proxy/\?url=.*
+      - /**
+      #TODO: implement proxy in gateaway, mirroring security-proxy's behavior
+      #- /proxy/\?url=.*
       anonymous: true
       # wonder what's the purpose of having several roles defined in security-proxy's security-mappings.xml
       # if anonymous access is granted:
       # <intercept-url pattern=".*" access="IS_AUTHENTICATED_ANONYMOUSLY,ROLE_USER,ROLE_GN_EDITOR,ROLE_GN_REVIEWER,ROLE_GN_ADMIN,ROLE_ADMINISTRATOR,ROLE_SUPERUSER,ROLE_ORGADMIN" />
     services:
-      cas:
-        target: http://cas:8080/cas/
-        access-rules:
-        - intercept-url: /cas/login.*
-          anonymous: true
       analytics:
         target: http://analytics:8080/analytics/
         access-rules:
-        - intercept-url: /analytics/.*
+        - intercept-url: /analytics/**
           allowed-roles: SUPERUSER,ORGADMIN
       atlas: 
         target: http://atlas:8080/atlas/
@@ -42,40 +33,45 @@ georchestra:
         target: http://console:8080/console/
         access-rules:
         - intercept-url:
-          - /console/public/.*
-          - /console/manager/public/.*
+          - /console/public/**
+          - /console/manager/public/**
           #/console/account resources are private except account/new and account/passwordRecovery
           - /console/account/new
           - /console/account/newPassword
           - /console/account/passwordRecovery
-          - /console/account/js/.*
-          - /console/account/css/.*
-          - /console/account/fonts/.*
+          - /console/account/js/**
+          - /console/account/css/**
+          - /console/account/fonts/**
           - /console/testPage
           anonymous: true
         - intercept-url:
-          - /console/private/.*
-          - /console/manager/.*
-          - /console/.*/emails
-          - /console/.*/sendEmail # /console/sendEmail features are reserved to SUPERUSER & delegated admins
-          - /console/.*/emailTemplates
+          - /console/private/**
+          - /console/manager/**
+          - /console/*/emails
+          - /console/*/sendEmail # /console/sendEmail features are reserved to SUPERUSER & delegated admins
+          - /console/*/emailTemplates
           - /console/attachments
           allowed-roles: SUPERUSER,ORGADMIN
         - intercept-url: /console/emailProxy #activated for members having the EMAILPROXY role
           allowed-roles: EMAILPROXY
-        - intercept-url: /console/internal/.*
+        - intercept-url: /console/internal/**
           allowed-roles: SUPERUSER
-        - intercept-url: /console/account/.*
+        - intercept-url: /console/account/**
           anonymous: false
       extractorapp: 
         target: http://extractorapp:8080/extractorapp/
         access-rules:
-        - intercept-url: /extractorapp/(admin.*|jobs/.*)
+        - intercept-url: /extractorapp/admin*
           allowed-roles: ADMINISTRATOR
-        - intercept-url: /extractorapp/.*
+        - intercept-url: /extractorapp/jobs/**
+          allowed-roles: ADMINISTRATOR
+        - intercept-url: /extractorapp/**
           allowed-roles: EXTRACTORAPP
       geonetwork: 
         target: http://geonetwork:8080/geonetwork/
+        access-rules:
+        - intercept-url: /geoserver/**
+          anonymous: true
         headers:
           proxy: true
           username: false
@@ -85,15 +81,26 @@ georchestra:
           json-user: true
       geoserver: 
         target: http://geoserver:8080/geoserver/
+        access-rules:
+        - intercept-url: /geoserver/**
+          anonymous: true
       geofence:
         target: http://geofence:8080/geofence/
         access-rules:
-        - intercept-url: /geofence/.*
+        - intercept-url: /geofence/**
           allowed-roles: ADMINISTRATOR
       header: 
         target: http://header:8080/header/
+        access-rules:
+        - intercept-url: /header/**
+          anonymous: true
       mapfishapp: 
         target: http://mapfishapp:8080/mapfishapp/
+        access-rules:
+        - intercept-url: /mapfishapp/ogcproxy/**
+          forbidden: true
+        - intercept-url: /mapfishapp/**
+          anonymous: true
       geowebcache: 
         target: http://geowebcache:8080/geowebcache/
       mapstore: 
@@ -109,29 +116,25 @@ georchestra:
           json-user: true
           json-organization: true
         access-rules:
-        - intercept-url: /datafeeder/.*
+        - intercept-url: /datafeeder/**
           anonymous: false
       import: 
         target: http://import:80/
         access-rules:
-        - intercept-url: /import/.*
+        - intercept-url: /import/**
           anonymous: false
----
-# map to localhost at the ports defined in docker-compose.dev.yml
-# run from docker repo with docker-compose -f docker-compose.yml -f docker-compose.dev.yml up -d
-# to debug this app directly from the IDE
-spring.config.activate.on-profile: dev
-ldap.url: ldap://localhost:3891
-georchestra.gateway.services:
-  header.target: http://localhost:10003/header/
-  mapfishapp.target: http://localhost:10004/mapfishapp/
-  extractorapp.target: http://localhost:10005/extractorapp/
-  geoserver.target: http://localhost:10006/geoserver/
-  console.target: http://localhost:10007/console/
-  geonetwork.target: http://localhost:10008/geonetwork/
-  analytics.target: http://localhost:10009/analytics/
-  mapstore.target: http://localhost:10010/mapstore/
-  datafeeder.target: http://localhost:10011/datafeeder
-  import.target: http://localhost:10012/
-  atlas.target: http://localhost:8080/atlas/
-  geowebcache.target: http://localhost:8080/geowebcache/
+
+logging:
+  level:
+    root: warn
+    '[org.springframework]': info
+    '[org.springframework.cloud.gateway]': info
+    '[org.springframework.security]': info
+    '[org.springframework.security.oauth2]': debug
+    '[org.georchestra.gateway]': info
+    '[org.georchestra.gateway.filter.headers]': debug
+    '[org.georchestra.gateway.config.security]': info
+    '[org.georchestra.gateway.config.security.accessrules]': info
+    '[org.georchestra.gateway.security.ldap]': info
+    '[org.georchestra.gateway.security.oauth2]': info
+
